src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    @apply box-border m-0 p-0;
}

body {
    @apply transition-colors duration-300
    bg-light dark:bg-dark;
}

header {
    @apply transition-colors duration-300
    bg-secondary dark:bg-secondary-dm
    text-primary dark:text-primary-dm
    w-full fixed top-0 z-20;
    box-shadow: 3px 9px 12px 0px rgba(0,0,0,0.39);
        -webkit-box-shadow: 3px 9px 12px 0px rgba(0,0,0,0.39);
        -moz-box-shadow: 3px 9px 12px 0px rgba(0,0,0,0.39);
}

section {
    @apply w-full py-10 relative;
}

/* Nav */
nav ul {
    list-style: none;
    display: flex;
    align-items: center;
}

nav li {
    margin-right: 20px;
    transition: transform 8s ease;
}

nav li:hover {
    transform: translateY(-2px);
}

nav ul li:last-child a:hover {
    color: #1f1f1f;
}

#desk-menu li a {
    @apply inline-block transition-transform duration-200 ease-in-out;
    text-shadow: 0 0 0 transparent;
}

#desk-menu li a:hover {
    @apply -translate-y-0.5
    text-shadow-dark /* Extended class */
    dark:text-shadow-light /* Extended class */
    ; 
}

#mobile-menu {
    @apply bg-[oklch(95%_0.03_250)] dark:bg-[oklch(18%_0.03_250)]
    md:hidden top-14 right-0
    w-full h-screen px-4 py-4 space-y-2
    font-medium text-right
    flex-col items-end;
}

#mobile-menu li a {
    @apply block py-2 px-2
    hover:bg-slate-600/30;
    border-bottom: 1px solid #1e2229;
}

.breadcrumb {
    @apply text-gray-500 text-sm
    flex items-center mb-4;
}

/* === Secciones === */
.bg-section-1 {
    @apply bg-secondary dark:bg-[oklch(28%_0.03_250)];
}

.bg-section-2 {
    @apply dark:bg-[oklch(54.6%_0.245_262.881)] bg-[oklch(70%_0.25_262.881)];
}

.bg-section-3 {
    @apply bg-[oklch(94%_0.02_280)] dark:bg-[oklch(30%_0.015_280)];
}

/* === Tipografía Global === */
.hero-heading {
    @apply text-4xl font-bold leading-tight md:text-6xl
    text-shadow-dark
    ;
    
}

.hero-subheading {
    @apply text-3xl font-bold leading-tight md:text-5xl
    text-shadow-dark;
    /*
    box-shadow: -14px 16px 13px 0px rgba(0,0,0,0.39);
        -webkit-box-shadow: -14px 16px 13px 0px rgba(0,0,0,0.39);
        -moz-box-shadow: -14px 16px 13px 0px rgba(0,0,0,0.39);
    */
}

/* === Kicker === */
#kicker-container{
    text-transform: uppercase;
    width:100%;
    height: 2rem;
    @apply -translate-y-[2vh];
}

.kicker {
    font-family: 'Alumni Sans SC', sans-serif;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    font-weight: 500;
    font-size: 2rem;
    line-height: 1.25rem;
}

#kicker-slider { 
    overflow: hidden;
    display: block;
    position: relative;
}

#kicker-slider > div > div { 
    margin: 0;
    height: 3rem;
    /* margin-bottom:45px; */
}

#kicker-slider div:first-child {
    animation: show 5s linear infinite;
}

.kicker-inner {
    height: 3rem;
    line-height: 3rem;
    display: flex;
    flex-direction: column;
    transition: transform 0.5s ease-in-out;
    padding: 0 2px;
    align-items: left;
}

/* === Global Section Styles === */
.global-section-text {
    @apply text-4xl md:text-5xl font-bold tracking-tight mb-4
    text-primary dark:text-primary-dm;
}

.global-heading {
    @apply text-3xl font-semibold mb-3 transition-colors duration-300
    text-primary dark:text-primary-dm;
}

.global-subheading {
    @apply text-2xl font-medium mb-2
    text-[#6b7280] dark:text-[#9ca3af];
}

.global-text {
    @apply text-base leading-loose
    text-dark dark:text-[#9ca3af];
}

/* === Botones === */
.btn-primary {
    @apply w-full inline-block text-center rounded
    bg-[oklch(54.6%_0.245_262.881)] dark:bg-[oklch(70%_0.25_262.881)]
    hover:bg-[oklch(54.6%_0.3_262.881)] dark:hover:bg-[oklch(70%_0.3_262.881)]
    font-semibold text-primary-dm
    transition-colors duration-300;
    ;
}

.btn-secondary {
    @apply w-full inline-block text-center rounded
    bg-blue-500
    hover:bg-blue-600
    font-semibold text-white
    hover:text-gray-800
    transition-colors duration-300;
}

.btn-mutted {
    @apply w-full inline-block text-center rounded
    bg-gray-300
    hover:bg-gray-400
    font-semibold text-gray-800
    hover:text-gray-500
    transition duration-300;
}

/* === WaveSeperator Component === */

.onde {
    position:relative;
    width: 100%;
    height: 8vh;
    margin-bottom:-7px; /*Fix for safari gap*/
    min-height:100px;
    max-height:150px;
    transform: translateY(5.3vh);
}

/* Animation */
.parallaxonde > use {
    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
}
.parallaxonde > use:nth-child(1) {
    animation-delay: -2s;
    animation-duration: 7s;
}
.parallaxonde > use:nth-child(2) {
    animation-delay: -3s;
    animation-duration: 10s;
}
.parallaxonde > use:nth-child(3) {
    animation-delay: -4s;
    animation-duration: 13s;
}
.parallaxonde > use:nth-child(4) {
    animation-delay: -5s;
    animation-duration: 20s;
}
@keyframes move-forever {
    0% {
        transform: translate3d(-90px,0,0);
    }
    100% { 
        transform: translate3d(85px,0,0);
    }
}
/*Shrinking for mobile*/
@media (max-width: 768px) {
    .onde {
        height:40px;
        min-height:40px;
    }
}

/* ≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡ DEBUG CLASSES ≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡ */

.test_1 {
    @apply bg-red-500/40;
}

.test_2 {
    @apply bg-blue-600/40;
}

.test_3 {
    @apply bg-green-600/40;
}

.test_4 {
    @apply bg-yellow-400/50;
}

